--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <version>4.3.10.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.2.Final</version>
+        </dependency>
+
         <!--DataBase HyperSQL-->
         <dependency>
             <groupId>org.hsqldb</groupId>
